<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SymAddrInfo" Id="{85df6d70-04b1-4024-ac6c-b5398cbe2427}">
    <Declaration><![CDATA[TYPE
    ST_SymAddrInfo :
    STRUCT
        pSymAddr : pvoid;
        cbSymSize : UDINT;
    END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>